css update for grid

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <br>
       <div class="container">
-        <div class="April-2020">
+        <div class="April2020">
             <h3>April 2020</h3>
         </div>
         <div class="img">
@@ -100,6 +100,9 @@
             <p>Griot Theatre 233 State St Chicago,IL</p>
             <p>$75</p>
         </div>
+        <div class="button3">
+            <button>Read more</button>
+        </div>
         <div class="content4">
             <h4>A Raisin In The Sun</h4>
             <br>
@@ -107,10 +110,7 @@
             <p>Griot Theatre 233 State St Chicago,IL</p>
             <p>$75</p>
         </div>
-        <div class="button3">
-            <button>Read more</button>
-        </div>
-        <div class="button-4">
+        <div class="button4">
             <button>Read more</button>
         </div>
       </div>
