button update for grid

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Griot Theater</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg bg-light ">
+        <div class="container-fluid navupdate">
+          <a class="navbar-brand griot" href="#">Griot Theater</a>
+          <button class="navbar-togglertag" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Our Actors</a>
-              <a class="nav-link" href="#">Mission</a>
-              <a class="nav-link" href="#">Contact</a>
+          <div class="collapse navbar-collapse tag" id="navbarNavAltMarkup">
+            <div class="navbar-nav ">
+              <a class="nav-link active tag" aria-current="page" href="#">Home</a>
+              <a class="nav-link tag" href="#">Features</a>
+              <a class="nav-link tag" href="#">Our Actors</a>
+              <a class="nav-link tag" href="#">Mission</a>
+              <a class="nav-link tag" href="#">Contact</a>
             </div>
           </div>
         </div>
@@ -30,7 +30,6 @@
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -43,13 +42,6 @@
             <img src="https://pyxis.nymag.com/v1/imgs/cdf/188/c4bea15ff5fdbb73754b27843dc11ba75e-apollo-theater.2x.rsocial.w600.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Apollo Shows</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://lh4.googleusercontent.com/qfssy4ZdJvxca0n6W1EcCSVErruKSXoSwgNgp4RoHexm8IG_TpAg7P6n71DLSPKrH4usoGgwC3tcg6c=w1920-h892" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
             </div>
           </div>
         </div>
@@ -78,7 +70,7 @@
             <p>$75</p>
         </div>
         <div class="button">
-            <button>Read more</button>
+            <button class="read">Read more</button>
         </div>
         <div class="img2"></div>
         <div class="content2">
@@ -89,7 +81,7 @@
             <p>$75</p>
         </div>
         <div class="button2">
-            <button>Read more</button>
+            <button class="read">Read more</button>
         </div>
         <div class="img3"></div>
         <div class="img4"></div>
@@ -101,7 +93,7 @@
             <p>$75</p>
         </div>
         <div class="button3">
-            <button>Read more</button>
+            <button class="read">Read more</button>
         </div>
         <div class="content4">
             <h4>A Raisin In The Sun</h4>
@@ -111,7 +103,7 @@
             <p>$75</p>
         </div>
         <div class="button4">
-            <button>Read more</button>
+            <button class="read">Read more</button>
         </div>
       </div>
 <script> src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"</script>
