--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3>April 2020</h3>
         </div>
         <div class="img">
-            <img src="" alt="">
+            <img src="https://lh6.googleusercontent.com/ZDNY76gigfspjxPaSqLc6WOyGEphisfLtdcC7R4kcsZIDTvRytRGtOo8ilNqqvwu1L4BtvRb-8HU7X0=w937-h880" alt="">
         </div>
         <div class="content">
             <h4>A Raisin In The Sun</h4>
@@ -72,8 +72,10 @@
         <div class="button">
             <button class="read">Read more</button>
         </div>
-        <div class="img2"></div>
-        <div class="content2">
+        <div class="img2">
+          <img src="https://lh6.googleusercontent.com/ZDNY76gigfspjxPaSqLc6WOyGEphisfLtdcC7R4kcsZIDTvRytRGtOo8ilNqqvwu1L4BtvRb-8HU7X0=w937-h880" alt="">
+        </div>
+        <div class="content">
             <h4>A Raisin In The Sun</h4>
             <br>
             <h5>April 6, 2020 - March 20, 2020</h5>
@@ -83,23 +85,27 @@
         <div class="button2">
             <button class="read">Read more</button>
         </div>
-        <div class="img3"></div>
-        <div class="img4"></div>
-        <div class="content3">
-            <h4>A Raisin In The Sun</h4>
-            <br>
-            <h5>April 6, 2020 - March 20, 2020</h5>
-            <p>Griot Theatre 233 State St Chicago,IL</p>
-            <p>$75</p>
+        <div class="img3">
+          <img src="https://lh6.googleusercontent.com/ZDNY76gigfspjxPaSqLc6WOyGEphisfLtdcC7R4kcsZIDTvRytRGtOo8ilNqqvwu1L4BtvRb-8HU7X0=w937-h880" alt="">
+        </div>
+        <div class="content">
+          <h4>A Raisin In The Sun</h4>
+          <br>
+          <h5>April 6, 2020 - March 20, 2020</h5>
+          <p>Griot Theatre 233 State St Chicago,IL</p>
+          <p>$75</p>
         </div>
         <div class="button3">
-            <button class="read">Read more</button>
+          <button class="read">Read more</button>
         </div>
-        <div class="content4">
-            <h4>A Raisin In The Sun</h4>
-            <br>
-            <h5>April 6, 2020 - March 20, 2020</h5>
-            <p>Griot Theatre 233 State St Chicago,IL</p>
+        <div class="img4">
+          <img src="https://lh6.googleusercontent.com/ZDNY76gigfspjxPaSqLc6WOyGEphisfLtdcC7R4kcsZIDTvRytRGtOo8ilNqqvwu1L4BtvRb-8HU7X0=w937-h880" alt="">
+        </div>
+        <div class="content">
+          <h4>A Raisin In The Sun</h4>
+          <br>
+          <h5>April 6, 2020 - March 20, 2020</h5>
+          <p>Griot Theatre 233 State St Chicago,IL</p>
             <p>$75</p>
         </div>
         <div class="button4">
